# ai-olympics-charmander

./: .env.example  .env.template  .gitignore  Cam_test.txt  Data_Templates_fromPDF.md  GEMINI.md  ICP Defintion and Data Points  ICP.md  PROJECT_OVERVIEW.md  README.md  Tra_data_set  Tra_data_sets.md  Tra_sample_data.md  data_sources.md  evaluation.md  hieu_test.py  hieu_test_2.txt  implementation_log.md  lead_scoring_rubric.md  llms.txt  main.py  pyproject.toml  setup.py  test_dataset.md  validate_quickstart.py
.gemini/: GEMINI.md  settings copy.json
.github/instructions/: system_instructions.instructions.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  code_style_conventions.md  enhanced_research_plan_complete_data_sources.md  project_overview.md  project_purpose_and_tech_stack.md  project_structure_and_status.md  suggested_commands.md  task_completion_process.md  task_completion_requirements.md
.specify/memory/: constitution.md
data/database/: .gitkeep  prospects.db
data/prospects/: .gitkeep
data/templates/: profile_template.md  prospect_template.md  research_template.md
domain-definition/archived/: API_MCP.md  design.md
gemini-docs/: PRD.md  data_sources_API_MCP.md  requirements.md
solution_tests/: Tra_test_dataset.md
specs/: remaining_issues.md
specs/001-mcp-server-prospect/: data-model.md  plan.md  prospect_research_approach.md  quickstart.md  research.md  spec.md  tasks.md  workflow.md
specs/002-improve-research-with-llm/: data-model.md  plan.md  quickstart.md  (+3 more)
src/: cli_utils.py  config.py  logging_config.py
(+68 files in other folders)
