[project]
name = "ai-olympics-charmander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "click>=8.2.1",
    "mcp>=1.14.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "firecrawl-py>=4.3.6",
    "playwright>=1.55.0",
    "psutil>=7.0.0",
]
