[project]
name = "ai-olympics-charmander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "click>=8.2.1",
    "mcp>=1.14.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.43",
    # LLM Enhancement Dependencies
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    # Data Source API Dependencies  
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "requests>=2.32.0",
    # Data Processing
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "firecrawl-py>=4.3.6",
    "playwright>=1.55.0",
    "psutil>=7.0.0",
    # Additional Data Source Integrations
    "apollo-python>=0.2.0",  # Apollo.io Python client
    "google-search-results>=2.4.2",  # Serper API alternative
    "selenium>=4.27.0",  # Web automation fallback
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "lxml>=5.3.0",  # XML/HTML parser
]
